Reverted back to original dep as the fix/patch was only partial and created new dep issues.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<version>2.3.3</version>
 		</dependency>
 		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
@@ -47,11 +52,6 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.9.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.taglibs</groupId>
-			<artifactId>taglibs-build-tools</artifactId>
-			<version>1.2.5</version>
 		</dependency>
 	</dependencies>
 </project>
